# dd-v3-integrations

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  sdk-config.yaml
.claude-plugin/: marketplace.json
.github/workflows/: publish-csharp-sdk.yml  publish-go-sdk.yml  publish-langchain-js.yml  publish-langchain-python.yml  publish-llamaindex.yml  publish-mcp-server.yml  publish-n8n.yml  publish-node-sdk.yml  publish-python-sdk.yml  publish-rust-sdk.yml  publish-vercel-ai.yml  spec-drift-check.yml  test-csharp-sdk.yml  test-go-sdk.yml  test-langchain-js.yml  test-langchain-python.yml  test-llamaindex.yml  test-make.yml  test-n8n.yml  test-node-sdk.yml  test-python-sdk.yml  test-rust-sdk.yml  test-vercel-ai.yml  test-zapier.yml
docs/: INTEGRATION-PLAN.md  api-reference.md
integrations/claude-plugin/: .mcp.json  README.md
integrations/claude-plugin/.claude-plugin/: plugin.json
integrations/claude-plugin/skills/health-check/: SKILL.md
integrations/claude-plugin/skills/process-document/: SKILL.md
integrations/langchain/js/: README.md  package-lock.json  package.json  sdk-manifest.yaml
integrations/langchain/js/src/: document-loader.ts  index.ts
integrations/langchain/js/tests/: contract.test.ts  loader.test.ts
integrations/langchain/python/: README.md  pyproject.toml  sdk-manifest.yaml
integrations/langchain/python/src/langchain_docdigitizer/: __init__.py  document_loader.py
integrations/langchain/python/tests/: test_contract.py  test_loader.py
integrations/llamaindex/: README.md  pyproject.toml  sdk-manifest.yaml
integrations/llamaindex/src/llama_index/readers/docdigitizer/: __init__.py  base.py
integrations/llamaindex/tests/: test_contract.py  test_reader.py
integrations/make/: README.md  package-lock.json  package.json  sdk-manifest.yaml
integrations/make/app/: base.json  common.json
integrations/make/app/modules/: healthCheck.json  processDocument.json
integrations/make/tests/: contract.test.js
integrations/mcp-server/: README.md  package-lock.json  package.json  sdk-manifest.yaml
integrations/mcp-server/src/: api-client.ts  config.ts  errors.ts  index.ts  server.ts  types.ts
integrations/mcp-server/tests/: api-client.test.ts  contract.test.ts  errors.test.ts  server.test.ts
integrations/n8n/: .gitignore  README.md  package-lock.json  package.json  sdk-manifest.yaml  tsconfig.json
integrations/n8n/credentials/: DocDigitizerApi.credentials.ts
integrations/n8n/nodes/DocDigitizer/: DocDigitizer.node.json  DocDigitizer.node.ts
integrations/n8n/tests/: DocDigitizer.node.test.ts  contract.test.ts
integrations/vercel-ai/: README.md  package-lock.json  package.json  sdk-manifest.yaml
integrations/vercel-ai/src/: index.ts  tools.ts
integrations/vercel-ai/tests/: contract.test.ts  tools.test.ts
integrations/zapier/: README.md  authentication.js  index.js  package-lock.json  package.json  sdk-manifest.yaml
integrations/zapier/creates/: process_document.js
integrations/zapier/lib/: sdk.js
integrations/zapier/searches/: health_check.js
integrations/zapier/test/: authentication.test.js  contract.test.js  creates.test.js
openapi/: CHANGELOG.md  sync.openapi.yaml
scripts/: bump_version.py  sync_openapi.py  validate_sdk.py
sdks/csharp/: DocDigitizer.sln  README.md  sdk-manifest.yaml
sdks/csharp/src/DocDigitizer/: Config.cs  DocDigitizer.csproj  DocDigitizerClient.cs  Exceptions.cs  Models.cs
sdks/csharp/tests/DocDigitizer.Tests/: ContractTests.cs  DocDigitizer.Tests.csproj  ErrorsTests.cs  ModelsTests.cs
sdks/go/: README.md  client.go  config.go  contract_test.go  errors.go  errors_test.go  go.mod  models.go  models_test.go  sdk-manifest.yaml
sdks/node/: README.md  package-lock.json  package.json  sdk-manifest.yaml
sdks/node/src/: client.ts  config.ts  errors.ts  index.ts  models.ts
sdks/node/tests/: client.test.ts  contract.test.ts  errors.test.ts  models.test.ts
sdks/python/: README.md  pyproject.toml  sdk-manifest.yaml
sdks/python/src/docdigitizer/: __init__.py  _config.py  _http.py  async_client.py  client.py  exceptions.py  models.py
sdks/python/tests/: conftest.py  test_client.py  test_contract.py  test_exceptions.py  test_integration.py  test_models.py
sdks/rust/: Cargo.toml  README.md  sdk-manifest.yaml
sdks/rust/src/: client.rs  config.rs  errors.rs  lib.rs  models.rs
sdks/rust/tests/: contract_test.rs  errors_test.rs  models_test.rs
tests/: validate_manifests.py
