[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-readers-docdigitizer"
version = "0.1.0"
description = "LlamaIndex reader for the DocDigitizer document processing API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DocDigitizer", email = "support@docdigitizer.com" },
]
keywords = ["llamaindex", "llama-index", "docdigitizer", "reader", "ocr", "pdf", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docdigitizer>=0.1.0",
    "llama-index-core>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/DocDigitizer/dd-v3-integrations"
Repository = "https://github.com/DocDigitizer/dd-v3-integrations"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
