[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docdigitizer"
dynamic = ["version"]
description = "Official Python SDK for the DocDigitizer document processing API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "DocDigitizer", email = "support@docdigitizer.com" },
]
keywords = ["docdigitizer", "ocr", "document-processing", "pdf", "extraction", "invoice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/DocDigitizer/dd-v3-integrations"
Documentation = "https://github.com/DocDigitizer/dd-v3-integrations/tree/main/sdks/python"
Repository = "https://github.com/DocDigitizer/dd-v3-integrations"
Issues = "https://github.com/DocDigitizer/dd-v3-integrations/issues"

[tool.hatch.version]
path = "src/docdigitizer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/docdigitizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call the live API (require DD_API_KEY)",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
